Add hardcoded dns servers

--- a/ansible/roles/hostapd/files/wlan0.dnsmasq.conf
+++ b/ansible/roles/hostapd/files/wlan0.dnsmasq.conf
@@ -37,3 +37,7 @@ dhcp-leasefile=/var/lib/misc/dnsmasq.leases
 # the only server for the subnet, or multiple servers are present and they each
 # commit a binding for all clients.
 #dhcp-rapid-commit
+
+# Add some dns servers
+server=8.8.8.8
+server=1.1.1.1
