--- a/ansible/case.yml
+++ b/ansible/case.yml
@@ -1,9 +1,10 @@
 ---
 - hosts: case
   roles: # tags used for skipping roles
-    - { name: common,   tags: common }
-    - { name: users,    tags: users }
-    - { name: dash,     tags: dash }
-    - { name: hostapd,  tags: hostapd }
-    - { name: influxdb, tags: influxdb }
-    - { name: grafana,  tags: grafana }
+    - { name: common,     tags: common }
+    - { name: users,      tags: users }
+    - { name: dash,       tags: dash }
+    - { name: hostapd,    tags: hostapd }
+    - { name: influxdb,   tags: influxdb }
+    - { name: grafana,    tags: grafana }
+    - { name: mosquitto,  tags: mosquitto }
