Changed the deviceID, changed "bs" unit

--- a/espDummy/platformio.ini
+++ b/espDummy/platformio.ini
@@ -13,10 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_port = /dev/ttyUSB3
+upload_speed = 921600
 
 lib_deps =
-    Adafruit Unified Sensor
-    Adafruit BMP280 Library
     ESP8266_SSD1306
     PubSubClient
     
