ansible: ensure wvdial is installed to dial the modem

--- a/ansible/case.yml
+++ b/ansible/case.yml
@@ -8,3 +8,4 @@
     - { name: influxdb,   tags: influxdb }
     - { name: grafana,    tags: grafana }
     - { name: mosquitto,  tags: mosquitto }
+    - { name: gsm,        tags: gsm }
