espButton: enable ota updates

--- a/espButton/platformio.ini
+++ b/espButton/platformio.ini
@@ -12,10 +12,18 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-upload_port = /dev/ttyUSB3
-upload_speed = 921600
+# Pre action fetches and saves version.h with a new version number
+extra_scripts = pre:../idlversion_wrapper.py
+
+# Custom upload sends compiled firmware to the raspberry pi
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
     ESP8266_SSD1306
     PubSubClient
     EasyButton
+    # The latest version of esp32FOTA seems broken and unable to compile
+    esp32FOTA@0.1.1
+    # esp32FOTA needs this, atm 2 years old, ArduinoJson library to work
+    ArduinoJson@5.13.4
