espBME280: enable ota updates

--- a/espBME280/platformio.ini
+++ b/espBME280/platformio.ini
@@ -13,10 +13,17 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_speed = 921600
-upload_port = /dev/ttyUSB3
+# Pre action fetches and saves version.h with a new version number
+extra_scripts = pre:../idlversion_wrapper.py
+
+# Custom upload sends compiled firmware to the raspberry pi
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
     Adafruit Unified Sensor
     Adafruit BME280 Library
     ESP8266_SSD1306
     PubSubClient
+    esp32FOTA@0.1.1
+    ArduinoJson@5.13.4
