ansible: install wireguard to raspberry pi

--- a/ansible/case.yml
+++ b/ansible/case.yml
@@ -9,3 +9,4 @@
     - { name: grafana,    tags: grafana }
     - { name: mosquitto,  tags: mosquitto }
     - { name: gsm,        tags: gsm }
+    - { name: vpnclient,  tags: vpnclient }
