ansible: wireguard communication is operational

--- a/ansible/roles/vpnclient/tasks/main.yml
+++ b/ansible/roles/vpnclient/tasks/main.yml
@@ -25,3 +25,27 @@
     name: wireguard
     state: present
     force_apt_get: true
+
+- name: install wireguard device
+  copy:
+    src: wg0.netdev
+    dest: /etc/systemd/network
+  register:
+    wireguardDevice
+#
+# Highly important todo: 
+# Should a new case be introduces - this will not cut it
+# we need a way for ansible to manage ip adresses
+#
+- name: install wireguard network configuration
+  copy:
+    src: wg0.network
+    dest: /etc/systemd/network
+  register:
+    wireguardNetwork
+
+- name: restart networkd when changed
+  service:
+    name: systemd-networkd.service
+    state: restarted
+  when: wireguardDevice.changed == True or wireguardNetwork.changed == True
