--- a/ansible/case_inventory.yml
+++ b/ansible/case_inventory.yml
@@ -7,3 +7,4 @@ all:
           ansible_become: yes
           ansible_ssh_private_key_file: id_rsa
           ansible_ssh_common_args: -o UserKnownHostsFile=known_hosts
+          ansible_python_interpreter: /usr/bin/python3
