--- a/ansible/cloud_inventory.yml
+++ b/ansible/cloud_inventory.yml
@@ -6,3 +6,4 @@ all:
           ansible_user: ansible
           ansible_become: yes
           ansible_ssh_common_args: -o UserKnownHostsFile=known_hosts
+          ansible_python_interpreter: /usr/bin/python3
