ansible: added webgateway serving grafana directly from raspberry

--- a/ansible/cloud.yml
+++ b/ansible/cloud.yml
@@ -3,3 +3,4 @@
   roles:
     - { name: common, tags: common }
     - { name: vpnserver, tags: vpnserver }
+    - { name: webgateway, tags: webgateway }
