--- a/ansible/case_inventory.yml
+++ b/ansible/case_inventory.yml
@@ -5,5 +5,5 @@ all:
         10.14.47.2:
           ansible_user: pi
           ansible_become: yes
-          ansible_ssh_common_args: -o UserKnownHostsFile=known_hosts -F ssh_config
+          ansible_ssh_common_args: -F ssh_config
           ansible_python_interpreter: /usr/bin/python3
