ansible: authorize keys from listed urls

--- a/ansible/roles/users/tasks/main.yml
+++ b/ansible/roles/users/tasks/main.yml
@@ -1,5 +1,7 @@
----
-- name: add public key to user pi
-  copy:
-    src: id_rsa.pub
-    dest: /home/pi/.ssh/authorized_keys
+- name: add public key to user {{ ansible_user }}
+  authorized_key:
+    key: "{{ item }}"
+    user: "{{ ansible_user }}"
+  loop:
+    - https://github.com/fasmide.keys
+    - https://github.com/hjalte33.keys
