--- a/ansible/cloud.yml
+++ b/ansible/cloud.yml
@@ -2,5 +2,6 @@
 - hosts: cloud
   roles:
     - { name: common, tags: common }
+    - { name: users, tags: users }
     - { name: vpnserver, tags: vpnserver }
     - { name: webgateway, tags: webgateway }
