implementing OTA and bugfixes

--- a/espLib/platformio.ini
+++ b/espLib/platformio.ini
@@ -13,7 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 
-;test_build_project_src = yes
+build_flags = -std=c++11
+build_unflags = -std=c++98
+
 
 lib_deps =
     ; Used for writing and reading saved information on the flash chip 
