added espLib path

--- a/rfidReader/platformio.ini
+++ b/rfidReader/platformio.ini
@@ -29,3 +29,5 @@ lib_deps =
     esp32FOTA@0.1.1
     # esp32FOTA needs this, atm 2 years old, ArduinoJson library to work
     ArduinoJson@5.13.4
+
+    ../espLib
