--- a/ansible/roles/influxdb/tasks/main.yml
+++ b/ansible/roles/influxdb/tasks/main.yml
@@ -27,3 +27,8 @@
     name: influxdb
     state: started
     enabled: true
+
+- name: ensure influx has a database named 'idl'
+  shell: influx -execute 'create database idl'
+  # We dont want this to show up as changed - its an idempotent action
+  changed_when: false
