--- a/rfidReader/platformio.ini
+++ b/rfidReader/platformio.ini
@@ -30,4 +30,5 @@ lib_deps =
     # esp32FOTA needs this, atm 2 years old, ArduinoJson library to work
     ArduinoJson@5.13.4
 
+lib_extra_dirs = 
     ../espLib
