ansible: build,  upload and ensure  api is running

--- a/ansible/case.yml
+++ b/ansible/case.yml
@@ -4,6 +4,7 @@
     - { name: common,     tags: common }
     - { name: users,      tags: users }
     - { name: dash,       tags: dash }
+    - { name: api,        tags: api }
     - { name: hostapd,    tags: hostapd }
     - { name: influxdb,   tags: influxdb }
     - { name: grafana,    tags: grafana }
