--- a/ansible/roles/gatherkeys/tasks/main.yml
+++ b/ansible/roles/gatherkeys/tasks/main.yml
@@ -2,11 +2,13 @@
 - name: collect wireguard private key
   shell: wg show wg0 private-key
   register: private_key
+  changed_when: false
 
 - name: collect wireguard public key
   shell: wg show wg0 public-key
   register: public_key
-
+  changed_when: false
+  
 - set_fact:
     wg0:
       public_key: "{{ public_key.stdout }}"
