--- a/ansible/roles/vpnserver/tasks/main.yml
+++ b/ansible/roles/vpnserver/tasks/main.yml
@@ -23,8 +23,8 @@
   register:
     wireguardNetwork
 
-# - name: restart networkd when changed
-#   service:
-#     name: systemd-networkd.service
-#     state: restarted
-#   when: wireguardDevice.changed == True or wireguardNetwork.changed == True
+- name: restart networkd when changed
+  service:
+    name: systemd-networkd.service
+    state: restarted
+  when: wireguardDevice.changed == True or wireguardNetwork.changed == True
