--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -15,3 +15,5 @@ all:
           ansible_ssh_common_args: -F ssh_config
           ansible_python_interpreter: /usr/bin/python3
           wg0_ip_address: "10.14.47.2"
+          hostapd_ssid: idlcase
+          hostapd_wpa_password: Aalborg9000Robotlab
