--- a/espFFT/platformio.ini
+++ b/espFFT/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 1000000
+upload_speed = 921600
 
 lib_deps =
   arduinoFFT
