add library.json and dummy main so lib can complie

--- a/espLib/IDLNetworking/platformio.ini
+++ b/espLib/IDLNetworking/platformio.ini
@@ -25,4 +25,7 @@ lib_deps =
     PubSubClient
 
     ; Only the development branch works with esp32
-    https://github.com/tzapu/WiFiManager#development
+    https://github.com/tzapu/WiFiManager.git#development
+
+    ; firmware over the air
+    esp32FOTA@0.1.1
