--- a/espFFT/platformio.ini
+++ b/espFFT/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 1000000
+monitor_speed = 921600
 upload_speed = 921600
 
 lib_deps =
   arduinoFFT
+  ../espLib
