--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -17,3 +17,11 @@ all:
           wg0_ip_address: "10.14.47.2"
           hostapd_ssid: idlcase
           hostapd_wpa_password: Aalborg9000Robotlab
+        10.14.47.3:
+          ansible_user: pi
+          ansible_become: yes
+          ansible_ssh_common_args: -F ssh_config
+          ansible_python_interpreter: /usr/bin/python3
+          wg0_ip_address: "10.14.47.3"
+          hostapd_ssid: second-case
+          hostapd_wpa_password: Aalborg9000Robotlab
