Serious updates + cleanup of library. many changes

--- a/espLib/IDLNetworking/platformio.ini
+++ b/espLib/IDLNetworking/platformio.ini
@@ -18,8 +18,8 @@ build_unflags = -std=c++98
 
 
 lib_deps =
-    ; Used for writing and reading saved information on the flash chip 
-    ArduinoJson@5.13.4
+    
+    ArduinoJson
 
     ; MQTT 
     PubSubClient
@@ -27,5 +27,5 @@ lib_deps =
     ; Only the development branch works with esp32
     https://github.com/tzapu/WiFiManager.git#development
 
-    ; firmware over the air
-    esp32FOTA@0.1.1
+    ; firmware over the air 
+    https://github.com/chrisjoyce911/esp32FOTA.git
