--- a/espALS/platformio.ini
+++ b/espALS/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_speed = 921600
-upload_port = /dev/ttyS4
+monitor_speed = 115200
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
 
@@ -23,5 +23,4 @@ upload_command = $PROJECT_DIR/../idluploader $SOURCE
 
 lib_deps =
     ESP8266_SSD1306
-    ArduinoJson@5.13.4
     ../espLib
