update devices for new library + bugfixes

--- a/espFFT/platformio.ini
+++ b/espFFT/platformio.ini
@@ -12,8 +12,14 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 921600
 upload_speed = 921600
+monitor_speed = 115200
+# Pre action fetches and saves version.h with a new version number
+extra_scripts = pre:../idlversion_wrapper.py
+
+# Custom upload sends compiled firmware to the raspberry pi
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
   arduinoFFT
