--- a/espCustom1/platformio.ini
+++ b/espCustom1/platformio.ini
@@ -22,12 +22,12 @@ upload_protocol = custom
 upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
-    Adafruit Unified Sensor
-    https://github.com/PaulStoffregen/OneWire#master
+    ;https://github.com/PaulStoffregen/OneWire#master
+    https://github.com/stickbreaker/OneWire#master
     SPI
     DallasTemperature
     ESP8266_SSD1306
     PubSubClient
-    esp32FOTA@0.1.1
-    ArduinoJson@5.13.4
+    esp32FOTA@0.1.2
+    ArduinoJson
     ../espLib
