renamed and fixed espRFID firmware

--- a/espRFID/platformio.ini
+++ b/espRFID/platformio.ini
@@ -14,21 +14,26 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+# Pre action fetches and saves version.h with a new version number
+extra_scripts = pre:../idlversion_wrapper.py
+
+# Custom upload sends compiled firmware to the raspberry pi
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps = 
     https://github.com/tzapu/WiFiManager#development
 
-    ArduinoJson@5.13.4
     PubSubClient
-    EspSoftwareSerial@5.0.3
+    # EspSoftwareSerial@5.0.3
     MFRC522
     
     ESP8266_SSD1306
 
     # The latest version of esp32FOTA seems broken and unable to compile
-    esp32FOTA@0.1.1
+    esp32FOTA@0.1.2
     # esp32FOTA needs this, atm 2 years old, ArduinoJson library to work
-    ArduinoJson@5.13.4
+    ArduinoJson
 
 lib_extra_dirs = 
     ../espLib
