major espRFID overhaul

--- a/espRFID/platformio.ini
+++ b/espRFID/platformio.ini
@@ -16,24 +16,24 @@ monitor_speed = 115200
 upload_speed = 921600
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
+upload_port = /dev/cu.SLAB_USBtoUART
 
 # Custom upload sends compiled firmware to the raspberry pi
-upload_protocol = custom
-upload_command = $PROJECT_DIR/../idluploader $SOURCE 
+#upload_protocol = custom
+#upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps = 
     https://github.com/tzapu/WiFiManager#development
 
     PubSubClient
-    # EspSoftwareSerial@5.0.3
+    
+    # rfid reader
     MFRC522
     
     ESP8266_SSD1306
+    
+    https://github.com/chrisjoyce911/esp32FOTA.git
 
-    # The latest version of esp32FOTA seems broken and unable to compile
-    esp32FOTA@0.1.2
-    # esp32FOTA needs this, atm 2 years old, ArduinoJson library to work
-    ArduinoJson
-
+    EasyButton
 lib_extra_dirs = 
     ../espLib
