--- a/espCustom1/platformio.ini
+++ b/espCustom1/platformio.ini
@@ -14,20 +14,24 @@ board = esp32dev
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
+upload_port = /dev/cu.SLAB_USBtoUART
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
 
 # Custom upload sends compiled firmware to the raspberry pi
-upload_protocol = custom
-upload_command = $PROJECT_DIR/../idluploader $SOURCE 
+#upload_protocol = custom
+#upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
     ;https://github.com/PaulStoffregen/OneWire#master
     https://github.com/stickbreaker/OneWire#master
     SPI
     DallasTemperature
+    paulstoffregen/OneWire @ 2.3.3
     ESP8266_SSD1306
     PubSubClient
     esp32FOTA@0.1.2
     ArduinoJson
+    adafruit/Adafruit Unified Sensor @ ^1.1.4
+    adafruit/Adafruit TSL2591 Library @ ^1.2.1
     ../espLib
