cleanup and commets

--- a/espRFID/platformio.ini
+++ b/espRFID/platformio.ini
@@ -16,24 +16,30 @@ monitor_speed = 115200
 upload_speed = 921600
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
-upload_port = /dev/cu.SLAB_USBtoUART
 
 # Custom upload sends compiled firmware to the raspberry pi
-#upload_protocol = custom
-#upload_command = $PROJECT_DIR/../idluploader $SOURCE 
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps = 
+    
+    # Wifi manager to easily set wifi access and mqtt broker 
     https://github.com/tzapu/WiFiManager#development
-
+    
+    # MQTT client 
     PubSubClient
     
     # rfid reader
     MFRC522
     
+    # Oled screen
     ESP8266_SSD1306
     
+    # Firmware over the air 
     https://github.com/chrisjoyce911/esp32FOTA.git
 
+    # Easy way to deal with buttens
     EasyButton
+
 lib_extra_dirs = 
     ../espLib
