--- a/espCustom1/platformio.ini
+++ b/espCustom1/platformio.ini
@@ -14,16 +14,15 @@ board = esp32dev
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-upload_port = /dev/cu.SLAB_USBtoUART
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
 
 # Custom upload sends compiled firmware to the raspberry pi
-#upload_protocol = custom
-#upload_command = $PROJECT_DIR/../idluploader $SOURCE 
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
-    ;https://github.com/PaulStoffregen/OneWire#master
+    # OneWire library to fix some timeing issues on esp32
     https://github.com/stickbreaker/OneWire#master
     SPI
     DallasTemperature
