--- a/espIRAnalogDistance/platformio.ini
+++ b/espIRAnalogDistance/platformio.ini
@@ -16,25 +16,29 @@ monitor_speed = 115200
 upload_speed = 921600
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
-upload_port = /dev/cu.SLAB_USBtoUART
 
 # Custom upload sends compiled firmware to the raspberry pi
-#upload_protocol = custom
-#upload_command = $PROJECT_DIR/../idluploader $SOURCE 
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps = 
+    # Wifi manager for easy wifi configuration 
     https://github.com/tzapu/WiFiManager#development
 
+    # MQTT client for messages
     PubSubClient
     
     # distance sensor
-    #https://github.com/guillaume-rico/SharpIR
     https://github.com/NuwanJ/ESP32SharpIR
 
+    # Oled screen
     ESP8266_SSD1306
     
+    # Firmware over the air
     https://github.com/chrisjoyce911/esp32FOTA.git
 
+    # Easy way to deal with buttons
     EasyButton
+    
 lib_extra_dirs = 
     ../espLib
