--- a/energy/energy.yml
+++ b/energy/energy.yml
@@ -3,4 +3,4 @@
   roles:
     - { name: common, tags: common }
     - { name: users, tags: users }
-    - { name: hostapd, tags: hostapd }
+    - { name: networking, tags: networking }
