networking: use hardcoded pool of NTP servers

--- a/energy/roles/common/files/timesyncd.conf
+++ b/energy/roles/common/files/timesyncd.conf
@@ -2,4 +2,7 @@
 # the default fallback as our main pool
 
 [Time]
-NTP=0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
+# It also seems that we are unable to resolve these names as the raspberry pi may have been shutoff
+# for too long and then does not trust the dns servers it gets provided
+# NTP=0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
+NTP=85.204.137.77 5.103.139.163 85.191.193.248 194.192.112.20 91.210.59.156 185.15.72.251 5.103.128.88 217.198.219.102 162.159.200.123
