--- a/energy/roles/networking/files/ap0.dnsmasq.conf
+++ b/energy/roles/networking/files/ap0.dnsmasq.conf
@@ -40,3 +40,6 @@ dhcp-leasefile=/var/lib/misc/dnsmasq.leases
 
 # make sure dnsmasq does not try to listen on localhost:53 as this is used by systemd-resolved
 bind-interfaces
+
+# use resolved for dns
+server=127.0.0.53
