bugfixes for setting defaults

--- a/espCustom1/platformio.ini
+++ b/espCustom1/platformio.ini
@@ -22,15 +22,24 @@ upload_protocol = custom
 upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
-    # OneWire library to fix some timeing issues on esp32
+    # Wifi manager for easy wifi configuration 
+    https://github.com/tzapu/WiFiManager#development
+
+    # Firmware over the air
+    https://github.com/chrisjoyce911/esp32FOTA.git
+
     https://github.com/stickbreaker/OneWire#master
-    SPI
-    DallasTemperature
+
+    # older version of onewire problem to fix issuses with detecting the temperature sensors
     paulstoffregen/OneWire @ 2.3.3
+
+    DallasTemperature
+
     ESP8266_SSD1306
     PubSubClient
-    esp32FOTA@0.1.2
-    ArduinoJson
+
     adafruit/Adafruit Unified Sensor @ ^1.1.4
     adafruit/Adafruit TSL2591 Library @ ^1.2.1
+
+lib_extra_dirs = 
     ../espLib
