analog activation pin change, spelling and fixes.

--- a/espCustom1/platformio.ini
+++ b/espCustom1/platformio.ini
@@ -16,6 +16,7 @@ upload_speed = 921600
 monitor_speed = 115200
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
+#upload_port = /dev/cu.SLAB_USBtoUART
 
 # Custom upload sends compiled firmware to the raspberry pi
 upload_protocol = custom
