redesign: reinforcement and size increase

--- a/espImu/platformio.ini
+++ b/espImu/platformio.ini
@@ -15,16 +15,15 @@ framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 # Pre action fetches and saves version.h with a new version number
-#extra_scripts = pre:../idlversion_wrapper.py
-upload_port = /dev/cu.SLAB_USBtoUART
+extra_scripts = pre:../idlversion_wrapper.py
+#upload_port = /dev/cu.SLAB_USBtoUART
 
 # Custom upload sends compiled firmware to the raspberry pi
-#upload_protocol = custom
-#upload_command = $PROJECT_DIR/../idluploader $SOURCE 
+upload_protocol = custom
+upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
   # MPU library
-  #https://github.com/hideakitai/MPU9250
   https://github.com/bolderflight/MPU9250
   
   # FFT transform library for frequenzy analysis
