--- a/espButton/platformio.ini
+++ b/espButton/platformio.ini
@@ -16,12 +16,20 @@ upload_speed = 921600
 monitor_speed = 115200
 # Pre action fetches and saves version.h with a new version number
 extra_scripts = pre:../idlversion_wrapper.py
+#upload_port = /dev/cu.SLAB_USBtoUART
 
 # Custom upload sends compiled firmware to the raspberry pi
 upload_protocol = custom
 upload_command = $PROJECT_DIR/../idluploader $SOURCE 
 
 lib_deps =
+    https://github.com/chrisjoyce911/esp32FOTA.git
     ESP8266_SSD1306
     EasyButton
+    # OneWire library to fix some timeing issues on esp32
+    https://github.com/stickbreaker/OneWire#master
+    PubSubClient
+    ArduinoJson
+    ; WiFiManager only the development branch works with esp32
+    https://github.com/tzapu/WiFiManager.git#4e4942b5110b8bbbafcbfec3e187dd49b969204e
     ../espLib
