removed development tag on wifimanager lib.

--- a/espAnalog/platformio.ini
+++ b/espAnalog/platformio.ini
@@ -37,9 +37,8 @@ lib_deps =
     
     ArduinoJson
 
-    ; WiFiManager only the development branch works with esp32.
-    # development branch broken so now reffering to a speciffic commit hash.
-    https://github.com/tzapu/WiFiManager.git#4e4942b5110b8bbbafcbfec3e187dd49b969204e
+    ; WiFiManager
+    https://github.com/tzapu/WiFiManager.git
 
     # idl library
     ../espLib
