--- a/espButton/platformio.ini
+++ b/espButton/platformio.ini
@@ -30,6 +30,6 @@ lib_deps =
     https://github.com/stickbreaker/OneWire#master
     PubSubClient
     ArduinoJson
-    ; WiFiManager only the development branch works with esp32
-    https://github.com/tzapu/WiFiManager.git#4e4942b5110b8bbbafcbfec3e187dd49b969204e
+    ; WiFiManager
+    https://github.com/tzapu/WiFiManager.git
     ../espLib
