--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -25,6 +25,14 @@ all:
           wg0_ip_address: "10.14.47.3"
           hostapd_ssid: second-case
           hostapd_wpa_password: Aalborg9000Robotlab
+        10.14.47.4:
+          ansible_user: pi
+          ansible_become: yes
+          ansible_ssh_common_args: -F ssh_config
+          ansible_python_interpreter: /usr/bin/python3
+          wg0_ip_address: "10.14.47.4"
+          hostapd_ssid: third-case
+          hostapd_wpa_password: Aalborg9000Robotlab
         10.14.47.5:
           ansible_user: pi
           ansible_become: yes
@@ -32,4 +40,12 @@ all:
           ansible_python_interpreter: /usr/bin/python3
           wg0_ip_address: "10.14.47.5"
           hostapd_ssid: grundfos-case
+          hostapd_wpa_password: Aalborg9000Robotlab
+        10.14.47.6:
+          ansible_user: pi
+          ansible_become: yes
+          ansible_ssh_common_args: -F ssh_config
+          ansible_python_interpreter: /usr/bin/python3
+          wg0_ip_address: "10.14.47.6"
+          hostapd_ssid: fourth-case
           hostapd_wpa_password: Aalborg9000Robotlab
