change to arduino version of mpu lib

--- a/espImu/platformio.ini
+++ b/espImu/platformio.ini
@@ -24,13 +24,18 @@ upload_command = $PROJECT_DIR/../idluploader $SOURCE
 
 lib_deps =
   # MPU library
-  https://github.com/bolderflight/MPU9250
+  https://github.com/bolderflight/MPU9250-arduino
+  
+  SPI
+
+  # FFT transform library for frequenzy analysis
+  arduinoFFT
   
   # FFT transform library for frequenzy analysis
   arduinoFFT
 
   # Wifi manager for easy wifi configuration 
-  https://github.com/tzapu/WiFiManager#development
+  https://github.com/tzapu/WiFiManager
 
   # Firmware over the air
   https://github.com/chrisjoyce911/esp32FOTA.git
